<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.5.10</version>
    <relativePath/> <!-- lookup parent from repository -->
  </parent>
  
  <groupId>l9g.webapp</groupId>
  <artifactId>l9g-mousetrap</artifactId>
  <version>0.1.2</version>
  <name>L9G Mousetrap DNS-01</name>
  
  <description>DNS-01 Helper Service for Micetro JSONRPC</description>
  
  <licenses>
    <license>
      <name>Apache-2.0</name>
      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
      <comments>A business-friendly OSS license</comments>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>thorsten-l</id>
      <name>Thorsten Ludewig</name>
      <email>t.ludewig@gmail.com</email>
      <url>https://github.com/thorsten-l</url>
      <roles>
        <role>architect</role>
        <role>developer</role>
      </roles>
      <timezone>Europe/Berlin</timezone>
      <properties>
        <picUrl>https://gravatar.com/avatar/5668953be5f76706e39b626fb8bc28d6</picUrl>
      </properties>
    </developer>
  </developers>
  
  <properties>
    <java.version>21</java.version>
    <l9g.crypto.version>1.0.1</l9g.crypto.version>
    <build.profile>default</build.profile>
    <exec.inheritIo>true</exec.inheritIo>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <start-class>l9g.mousetrap.Application</start-class>
  </properties>
  
  <dependencies>
    
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-security</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>
  
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-actuator</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-jersey</artifactId>
    </dependency>

    <!-- Source: https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-context -->
    <dependency>
      <groupId>org.springframework.cloud</groupId>
      <artifactId>spring-cloud-context</artifactId>
      <version>4.3.1</version>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>org.springdoc</groupId>
      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
      <version>2.8.15</version>
    </dependency>

    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>de.l9g</groupId>
      <artifactId>crypto-core</artifactId>
      <version>${l9g.crypto.version}</version>
    </dependency>
    <dependency>
      <groupId>de.l9g</groupId>
      <artifactId>crypto-spring</artifactId>
      <version>${l9g.crypto.version}</version>
    </dependency>
    
    <!-- cache -->
    <dependency>
      <groupId>com.github.ben-manes.caffeine</groupId>
      <artifactId>caffeine</artifactId>
    </dependency>
 
  </dependencies>

  <build>
    <finalName>${project.artifactId}</finalName>
    
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
      </resource>
    </resources>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <configuration>
          <encoding>${project.build.sourceEncoding}</encoding>
          <useDefaultDelimiters>false</useDefaultDelimiters>
          <delimiters>
            <delimiter>@</delimiter>
          </delimiters>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <encoding>${project.build.sourceEncoding}</encoding>
          <release>${java.version}</release>
          <compilerArgs>
            <arg>-proc:full</arg>
          </compilerArgs>
        </configuration>
      </plugin>
      
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <configuration>
          <executable>true</executable>
          <excludes>
            <exclude>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
            </exclude>
          </excludes>
        </configuration>
        <executions>
          <execution>
            <id>build-info</id>
            <goals>
              <goal>build-info</goal>
            </goals>
            <configuration>
              <additionalProperties>
                <java.version>${java.version}</java.version>
                <java.version.date>${java.version.date}</java.version.date>
                <java.vendor>${java.vendor}</java.vendor>
                <java.vendor.url>${java.vendor.url}</java.vendor.url>
                <java.vm.name>${java.vm.name}</java.vm.name>
                <java.vm.vendor>${java.vm.vendor}</java.vm.vendor>
                <java.vm.version>${java.vm.version}</java.vm.version>
                <java.runtime.name>${java.runtime.name}</java.runtime.name>
                <java.runtime.version>${java.runtime.version}</java.runtime.version>
                <description>${project.description}</description>
                <profile>${build.profile}</profile>
                <os.arch>${os.arch}</os.arch>
                <os.name>${os.name}</os.name>
                <os.version>${os.version}</os.version>
              </additionalProperties>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

</project>
